--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{SearchScreen}
+\subsubsection{SearchScreen}\label{App_Search_SearchScreen}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -11,7 +11,7 @@ Die Suchleiste wird am oberen Bildschirmrand angezeigt mit der Liste an Suchvors
 Links neben der Suchleiste am oberen Bildschirmrand ist ein \dq Zurück-Knopf \dq{}.
 Eine Tastatur ist geöffnet.
 
-\subsubsection*{\texttt{+ onClickBack}}%$$$M
+\subsubsection*{\texttt{+ onClickBack}}\label{App_Search_SearchScreen_onClickBack}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
@@ -19,7 +19,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ onClickReturn}}%$$$M
+\subsubsection*{\texttt{+ onClickReturn}}\label{App_Search_SearchScreen_onClickReturn}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
@@ -27,7 +27,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ onClickSearchSuggestion}}%$$$M
+\subsubsection*{\texttt{+ onClickSearchSuggestion}}\label{App_Search_SearchScreen_onClickSearchSuggestion}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag.
 \paragraph*{Beschreibung}
@@ -40,7 +40,7 @@ Und veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ onClickEnter}}%$$$M
+\subsubsection*{\texttt{+ onClickEnter}}\label{App_Search_SearchScreen_onClickEnter}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvorschlag.
 \paragraph*{Beschreibung}
@@ -53,7 +53,7 @@ Und veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvo
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ onClickKeyboard}}%$$$M
+\subsubsection*{\texttt{+ onClickKeyboard}}\label{App_Search_SearchScreen_onClickKeyboard}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der aktuell eingegebenen Zeichenkette.
 \paragraph*{Parameter}
@@ -71,7 +71,7 @@ Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar
 und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
 Diese Bibliothek kann für die Implementierung genutzt werden.
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_Search_SearchScreen_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
