--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{SettingsScreen}
+\subsubsection{SettingsScreen}\label{App_Settings_SettingsScreen}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -33,7 +33,7 @@ Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
     \item Lizenzen anzeigen: Wird auf diese Schaltfläche geklickt, wechselt die App in die Dokumentenansicht und zeigt dort Open-Source-Lizenzen der App an.
 \end{itemize}
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_Settings_SettingsScreen_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
