--- a/Kapitel/02_App/07_Settings/Klassen/Theme/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/Theme/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Theme}
+\subsubsection{Theme}\label{App_Settings_Theme}
 \paragraph*{Typ}
 Enum.
 \paragraph*{Beschreibung}
@@ -13,7 +13,7 @@ Compose-Theme bleibt daher der Implementierung vorbehalten.
     \item \textbf{DARK\_MODE}: Dunkelmodus der App.
 \end{itemize}
 
-\subsubsection{\texttt{+ getName() : String}}%$$$M
+\subsubsection{\texttt{+ getName() : String}}\label{App_Settings_Theme_getName}%$$$M
 \paragraph*{Beschreibung}
 Gibt den Namen des Themes auf der aktuellen Sprache zurück.
 \paragraph*{Parameter}
