Added labels to App/DocumentViewer.

--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentScreen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{DocumentScreen}
+\subsubsection{DocumentScreen}\label{App_DocumentViewer_DocumentScreen}
 \paragraph*{Typ}
 \texttt{Composable}.
 \paragraph*{Beschreibung}
@@ -14,7 +14,7 @@ Die Überschrift wird am oberen Bildschirmrand angezeigt.
 Links neben der Überschrift am oberen Bildschirmrand ist ein \dq Zurück-Knopf \dq{}.
 Der Text wird unter der Unterschrift und dem \dq Zurück-Knopf \dq{} angezeigt und man kann scrollen.
 
-\subsubsection*{\texttt{+ onClickBack()}}%$$$M
+\subsubsection*{\texttt{+ onClickBack()}}\label{App_DocumentViewer_DocumentScreen_onClickBack}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen des Textanzeigefensters.
 \paragraph*{Parameter}
@@ -22,7 +22,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{\texttt{+ onClickReturn()}}%$$$M
+\subsubsection*{\texttt{+ onClickReturn()}}\label{App_DocumentViewer_DocumentScreen_onClickReturn}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen des Textanzeigefensters.
 \paragraph*{Parameter}
@@ -30,7 +30,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection*{Bilder}
+\subsubsection*{Bilder}\label{App_DocumentViewer_DocumentScreen_Bilder}
 \begin{minipage}{\linewidth}
     \centering
     \begin{minipage}{.49\textwidth}
