--- a/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/Klassen/DocumentType/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{DocumentType}
+\subsubsection{DocumentType}\label{App_DocumentViewer_DocumentType}
 \paragraph*{Typ}
 Enum.
 \paragraph*{Beschreibung}
@@ -12,7 +12,7 @@ Dieser Enum enthält die verschiedenen Arten von anzeigbaren Textdokumenten.
     \item \textbf{LICENSES}: Lizenzen von Open-Source Bibliotheken, die in der App verwendet wurden.
 \end{itemize}
 
-\subsubsection*{\texttt{+ getId() : int}}%$$$M
+\subsubsection*{\texttt{+ getId() : int}}\label{App_DocumentViewer_DocumentType_getId}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Id des DokumentTypes zurück.
 \paragraph*{Parameter}
