--- a/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdateController/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{IDataUpdateController}
+\subsubsection{IDataUpdateController}\label{App_DocumentViewer_IDataupdateController}
 \paragraph*{Typ}
 \texttt{Interface}.
 \paragraph*{Beschreibung}
@@ -9,7 +9,7 @@ Es gibt eine Warteschlange von DataUpdatern, in der die Priorität der Schlüsse
 die Priorität, desto früher kommt ein DataUpdater dran). Initial ist die Warteschlange leer.\\
 
 
-\subsubsection*{\texttt{+ resumeUpdate() : boolean}}%$$$M
+\subsubsection*{\texttt{+ resumeUpdate() : boolean}}\label{App_DocumentViewer_IDataupdateController_resumeUpdate}%$$$M
 \paragraph*{Kurzbeschreibung}
 Führt die Aktualiserung fort.
 \paragraph*{Beschreibung}
@@ -24,7 +24,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{boolean}, ob die Aktualisierung erfolgreich war.
 
-\subsubsection*{\texttt{+ updateDatabase() : boolean}}%$$$M
+\subsubsection*{\texttt{+ updateDatabase() : boolean}}\label{App_DocumentViewer_IDataupdateController_updateDatabase}%$$$M
 \paragraph*{Kurzbeschreibung}
 Aktualisiert die lokale Datenbank komplett.
 \paragraph*{Beschreibung}
@@ -41,7 +41,7 @@ Keine.
 \texttt{boolean}, ob die Aktualisierung erfolgreich war.
 
 %---------------------------------------------------------
-\subsubsection{DataUpdateController}
+\subsubsection{DataUpdateController}\label{App_DocumentViewer_DataupdateController}
 \paragraph*{Typ}
 Implementiert \texttt{IDataUpdateController}.
 \paragraph*{Beschreibung}
