Added labels to App/DataStorage.

--- a/Kapitel/02_App/10_DataStorage/Daten/Datenklassen/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/Datenklassen/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Datenbank}
+\subsubsection{Datenbank}\label{App_DataManagement_Datenbank}
 \paragraph{Library: Room}
 Für die Haltung der Datenbank wird die \href{https://developer.android.com/training/data-storage/room}
 {Room Library} benutzt. Diese bietet eine weitere Abstraktionsebene über SQLite.
