--- a/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Shared Preferences}
+\subsubsection{Shared Preferences}\label{App_DataManagement_SharedPreferences}
 Einige Daten werden über Shared Preferences gespeichert. Es werden nur Strings unterstützt. 
 Nachfolgend ist angegeben, welchen Datentyp der gespeicherte String repräsentiert.\\
 Folgende Daten werden über Shared Preferences gespeichert:
