--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -7,4 +7,4 @@
 \inprelmod{findByPosVotes_int_ListAliasSuggestion}
 \inprelmod{updateVotes_String,int,boolean_boolean}
 \inprelmod{addVoter_String,String,int_boolean}
-\inprelmod{findNewerThanVersion_int_ListAliasSuggestion,int}
+\inprelmod{findByMapIDAmount_int,int_IterableAliasSuggestion}
