Fixed Settings formatting

--- a/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/ISignInController/main.tex
@@ -4,7 +4,7 @@
 \paragraph*{Beschreibung}
 Stellt Daten für das Anzeigen der Anmeldung bereit und verarbeitet die Interaktionen.
 
-\subsubsection{\texttt{+ getSupportedProviders() : List<String>}}\label{App_Signup_ISignInController_getSupportedProviders}%$$$M
+\subsubsection*{\texttt{+ getSupportedProviders() : List<String>}}\label{App_Signup_ISignInController_getSupportedProviders}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine Liste aller unterstützen Anmeldediensten zurück.
 \paragraph*{Parameter}
@@ -12,7 +12,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{List<String>} mit den Namen aller unterstützen Anmeldediensten.
 
-\subsubsection{\texttt{+ setAcceptPrivacyPolicy(value : boolean)}}\label{App_Signup_ISignInController_setAcceptPrivacyPolicy}%$$$M
+\subsubsection*{\texttt{+ setAcceptPrivacyPolicy(value : boolean)}}\label{App_Signup_ISignInController_setAcceptPrivacyPolicy}%$$$M
 \paragraph*{Beschreibung}
 Speichert, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Parameter}
@@ -22,7 +22,7 @@ Speichert, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Rückgabewert}
 \texttt{Void}.
 
-\subsubsection{\texttt{+ isPrivacyAccepted() : Livedata<boolean>}}\label{App_Signup_ISignInController_isPrivacyAccepted}%$$$M
+\subsubsection*{\texttt{+ isPrivacyAccepted() : Livedata<boolean>}}\label{App_Signup_ISignInController_isPrivacyAccepted}%$$$M
 \paragraph*{Beschreibung}
 Gibt den Wert zurück, ob der Benutzer den Datenschutz akzeptiert hat.
 \paragraph*{Parameter}
@@ -30,7 +30,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{Livedata<boolean>}, ob der Benutzer den Datenschutz akzeptiert hat.
 
-\subsubsection{\texttt{+ signIn(provider : String) : boolean}}\label{App_Signup_ISignInController_signIn}%$$$M
+\subsubsection*{\texttt{+ signIn(provider : String) : boolean}}\label{App_Signup_ISignInController_signIn}%$$$M
 \paragraph*{Kurzbeschreibung}
 Leitet den Benutzer zur Eingabe seiner Daten weiter.
 \paragraph*{Beschreibung}
