--- a/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInModel/main.tex
@@ -4,7 +4,7 @@
 \paragraph*{Beschreibung}
 Dieses Interface stellt die Daten zur Anmeldung bereit und führt die Anmeldung aus.
 
-\subsubsection{\texttt{+ getSupportedProviders() : List<String>}}\label{App_Signup_ISignInModel_getSupportProviders}%$$$M
+\subsubsection*{\texttt{+ getSupportedProviders() : List<String>}}\label{App_Signup_ISignInModel_getSupportProviders}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine Liste aller unterstützen Anmeldediensten zurück.
 \paragraph*{Parameter}
@@ -12,7 +12,7 @@ Keine.
 \paragraph*{Rückgabewert}
 \texttt{List<String>} mit den Namen aller unterstützen Anmeldediensten.
 
-\subsubsection{\texttt{+ signIn(provider : String) : boolean}}\label{App_Signup_ISignInModel_signIn}%$$$M
+\subsubsection*{\texttt{+ signIn(provider : String) : boolean}}\label{App_Signup_ISignInModel_signIn}%$$$M
 \paragraph*{Kurzbeschreibung}
 Führt die Anmeldung durch.
 \paragraph*{Beschreibung}
