Fix method 'findByName_String_int' in 'AliasRepository'
Replace method 'findByName_String_int'
with 'findByName_String_Alias' in 'AliasRepository'.

--- a/Kapitel/00_Backend/Repositories/AliasRepository/findByName_String_Alias/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/findByName_String_Alias/main.tex
@@ -1,10 +1,10 @@
-\paragraph*{\texttt{+findByName(alias : String) : int}}%$$$M
+\paragraph*{\texttt{+findByName(alias : String) : Alias}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die ID eines in der Datenbank hinterlegten Aliasses zurück.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Services} aufgerufen.
-Die Methode ermöglicht, dass die ID eines bestimmten Aliasses durch Angabe der entsprechenden Zeichenkette angefragt und zurückbekommen werden kann.
+Die Methode ermöglicht, dass das Entity-Objekt Alias, das der übergebenen Zeichenkette entspricht, angefragt und zurückgegeben werden kann.
 Hierfür wird der Alias als Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -13,5 +13,5 @@ Hierfür wird der Alias als Zeichenkette übergeben.
     		Der als Zeichenkette angegebene Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Die ID des als Zeichenkette übergebenen Aliasses, sofern die übergebene Zeichenkette gültig ist.
+Das Entity-Objekt Alias, das der übergebenen Zeichenkette entspricht, sofern die übergebene Zeichenkette gültig ist.
 Im Fall, dass die übergebene Zeichenkette ungültig ist, wird \texttt{null} zurückgegeben.
