--- a/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
@@ -2,5 +2,5 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{findByMapID_int_ListAlias}
-\inprelmod{findByName_String_boolean}
+\inprelmod{findByName_String_Alias}
 \inprelmod{deleteByName_String_boolean}
